getRequest(getProfile) and middleware
