# src/routes/index.ts
@@ -1,26 +1,32 @@
 import Router from 'express';
 
 import { serverHelper } from '../helpers';
-import { routeConstants } from './definition';
+import { routes } from './definition';
 import { errorCodes } from '../error-codes';
 import auth from './auth';
+import home from './home';
+import { checkAuthToken } from '../middleware';
 
 const router = Router();
 
 serverHelper.initializeSwaggerModule(
     {
         router,
-        swaggerUri: routeConstants.routes.swaggerURI,
+        swaggerUri: routes.swaggerURI,
         customSiteTitle: "Party Spot"
     }
 )
-
+// Chech authorization
+router.use(routes.home.root, checkAuthToken);
 // Health check
-router.get(routeConstants.routes.root, (req, res) => res.send(errorCodes.Success));
+router.get(routes.root, (req, res) => res.send(errorCodes.Success));
+//Auth
+router.post(routes.auth.register, auth.register);
+router.post(routes.auth.login, auth.login);
 
-router.post(routeConstants.routes.auth.register, auth.register);
+//Home
 
-router.post(routeConstants.routes.auth.login, auth.login);
+router.get(routes.home.getProfile, home.getProfile);
 
 export {
     router
